k8s/collab-ws-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yaml -o k8s
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: collab-ws-server
  name: collab-ws-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: collab-ws-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.k8s.yaml -o k8s
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/peerprep-default: "true"
        io.kompose.service: collab-ws-server
    spec:
      containers:
        - image: kxrt/peerprep-collab-ws-server
          name: collab-ws-server
          ports:
            - containerPort: 4444
              hostPort: 4444
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
