k8s/collaboration-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yaml -o k8s
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: collaboration-service
  name: collaboration-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: collaboration-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.k8s.yaml -o k8s
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/peerprep-default: "true"
        io.kompose.service: collaboration-service
    spec:
      containers:
        - env:
            - name: COLLABORATION_SERVICE_PORT
              value: "3005"
            - name: PGDATABASE
              value: dev
            - name: PGHOST
              value: postgres
            - name: PGPASSWORD
              value: "123"
            - name: PGPORT
              value: "5432"
            - name: PGSSLMODE
              value: disable
            - name: PGUSER
              value: postgres
          image: kxrt/peerprep-collaboration-service
          livenessProbe:
            exec:
              command:
                - wget --spider --no-verbose --tries=1 localhost:3005/ || exit 1
            failureThreshold: 20
            periodSeconds: 10
            timeoutSeconds: 5
          name: collaboration-service
          ports:
            - containerPort: 3005
              hostPort: 3005
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
