k8s/history-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yaml -o k8s
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: history-service
  name: history-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: history-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.k8s.yaml -o k8s
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/peerprep-default: "true"
        io.kompose.service: history-service
    spec:
      containers:
        - env:
            - name: HISTORY_SERVICE_PORT
              value: "3008"
            - name: PGDATABASE
              value: dev
            - name: PGHOST
              value: postgres
            - name: PGPASSWORD
              value: "123"
            - name: PGPORT
              value: "5432"
            - name: PGSSLMODE
              value: disable
            - name: PGUSER
              value: postgres
            - name: QUESTION_SERVICE_PORT
              value: "8080"
          image: kxrt/peerprep-history-service
          name: history-service
          ports:
            - containerPort: 3008
              hostPort: 3008
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
