k8s/matching-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yaml -o k8s
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: matching-service
  name: matching-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: matching-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.k8s.yaml -o k8s
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/peerprep-default: "true"
        io.kompose.service: matching-service
    spec:
      containers:
        - env:
            - name: COLLABORATION_SERVICE_PORT
              value: "3005"
            - name: MATCHING_SERVICE_PORT
              value: "8082"
            - name: QUESTION_SERVICE_PORT
              value: "8080"
            - name: RABBITMQ_HOST
              value: rabbitmq
            - name: RABBITMQ_PASS
              value: guest
            - name: RABBITMQ_PORT
              value: "5672"
            - name: RABBITMQ_USER
              value: guest
            - name: USER_SERVICE_PORT
              value: "3000"
          image: kxrt/peerprep-matching-service
          name: matching-service
          ports:
            - containerPort: 8082
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
