k8s/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yaml -o k8s
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.k8s.yaml -o k8s
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/peerprep-default: "true"
        io.kompose.service: user-service
    spec:
      containers:
        - env:
            - name: PGDATABASE
              value: dev
            - name: PGHOST
              value: postgres
            - name: PGPASSWORD
              value: "123"
            - name: PGPORT
              value: "5432"
            - name: PGSSLMODE
              value: disable
            - name: PGUSER
              value: postgres
            - name: SECRET_KEY
              value: secret
            - name: USER_SERVICE_PORT
              value: "3000"
          image: kxrt/peerprep-user-service
          name: user-service
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
