k8s/collab-ws-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yaml -o k8s
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: collab-ws-server
  name: collab-ws-server
spec:
  ports:
    - name: "4444"
      port: 4444
      targetPort: 4444
  selector:
    io.kompose.service: collab-ws-server
status:
  loadBalancer: {}
