k8s/collaboration-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yaml -o k8s
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: collaboration-service
  name: collaboration-service
spec:
  ports:
    - name: "3005"
      port: 3005
      targetPort: 3005
  selector:
    io.kompose.service: collaboration-service
status:
  loadBalancer: {}
