k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: front-end-service
  name: front-end-service
spec:
  ports:
    - port: 80
  selector:
    io.kompose.service: front-end-deployment
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: front-end-deployment
  name: front-end-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: front-end-deployment
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/peerprep-default: "true"
        io.kompose.service: front-end-deployment
    spec:
      containers:
        - image: kxrt/peerprep-front-end
          imagePullPolicy: Always
          name: front-end-deployment
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
