k8s/history-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yaml -o k8s
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: history-service
  name: history-service
spec:
  ports:
    - name: "3008"
      port: 3008
      targetPort: 3008
  selector:
    io.kompose.service: history-service
status:
  loadBalancer: {}
