k8s/history-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: history-service
  name: history-service
spec:
  ports:
    - port: 3008
  selector:
    io.kompose.service: history-deployment
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: history-deployment
  name: history-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: history-deployment
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/peerprep-default: "true"
        io.kompose.service: history-deployment
    spec:
      containers:
        - env:
            - name: HISTORY_SERVICE_PORT
              value: "3008"
            - name: PGDATABASE
              value: peerprep
            - name: PGHOST
              value: ep-morning-shape-82504535-pooler.ap-southeast-1.aws.neon.tech
            - name: PGPASSWORD
              value: z3jLWYrnNgE8
            - name: PGPORT
              value: "5432"
            - name: PGSSLMODE
              value: require
            - name: PGUSER
              value: admin
            - name: QUESTION_SERVICE_PORT
              value: "8080"
            - name: ENV
              value: Production
          image: kxrt/peerprep-history-service
          name: history-deployment
          ports:
            - containerPort: 3008
              hostPort: 3008
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
