k8s/judge-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yaml -o k8s
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: judge-service
  name: judge-service
spec:
  ports:
    - name: "2358"
      port: 2358
      targetPort: 2358
  selector:
    io.kompose.service: judge-service
status:
  loadBalancer: {}
