k8s/judge-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: judge-service
  name: judge-service
spec:
  type: ExternalName
  externalName: judge0-ce.p.rapidapi.com
