k8s/matching-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: matching-service
  name: matching-service
spec:
  ports:
    - port: 8082
  selector:
    io.kompose.service: matching-deployment
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: matching-deployment
  name: matching-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: matching-deployment
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/peerprep-default: "true"
        io.kompose.service: matching-deployment
    spec:
      containers:
        - env:
            - name: COLLABORATION_SERVICE_PORT
              value: "3005"
            - name: MATCHING_SERVICE_PORT
              value: "8082"
            - name: QUESTION_SERVICE_PORT
              value: "8080"
            - name: RABBITMQ_HOST
              value: rabbitmq-service
            - name: RABBITMQ_PASS
              value: guest
            - name: RABBITMQ_PORT
              value: "5672"
            - name: RABBITMQ_USER
              value: guest
            - name: USER_SERVICE_PORT
              value: "3000"
          image: kxrt/peerprep-matching-service
          name: matching-deployment
          ports:
            - containerPort: 8082
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
