k8s/question-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: question-service
  name: question-service
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: question-service
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: question-service
  name: question-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: question-service
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/peerprep-default: "true"
        io.kompose.service: question-service
    spec:
      containers:
        - env:
            - name: MONGODB_URL
              value: mongodb://mongo:27017/questions
            - name: QUESTIONS_URL
              value: https://asia-southeast1-peerprep-cs3219.cloudfunctions.net/getQuestions
          image: kxrt/peerprep-question-service
          name: question-service
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
