k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  ports:
    - port: 3000
  selector:
    io.kompose.service: user-deployment
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: user-deployment
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-deployment
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/peerprep-default: "true"
        io.kompose.service: user-deployment
    spec:
      containers:
        - env:
            - name: PGDATABASE
              value: peerprep
            - name: PGHOST
              value: ep-morning-shape-82504535.ap-southeast-1.aws.neon.tech
            - name: PGPASSWORD
              value: z3jLWYrnNgE8
            - name: PGPORT
              value: "5432"
            - name: PGSSLMODE
              value: require
            - name: PGUSER
              value: admin
            - name: SECRET_KEY
              value: secret
            - name: USER_SERVICE_PORT
              value: "3000"
          image: kxrt/peerprep-user-service
          imagePullPolicy: Always
          name: user-deployment
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
