k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # CORS
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
        # Question Service
        - path: /api/v1/questions(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: question-service
              port:
                number: 8080

        # User Service
        - path: /api/v1/user(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: user-service
              port:
                number: 3000  

        # Collaboration WebSocket Server
        - path: /collab/ws(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: collab-ws-server-service
              port:
                number: 4444  

        # Frontend
        - path: /(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: front-end-service
              port:
                number: 80
